# pods

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  crosscomp.sh  log4rs.yml  pods.desktop
.cargo/: config  config.toml
crates/data/: Cargo.toml
crates/data/src/: config.rs  db.rs  id.rs  lib.rs  pubsub.rs  reader.rs  subs.rs
crates/data/tests/: subscribe.rs
crates/feed/: Cargo.toml
crates/gui/: Cargo.toml
crates/gui/src/: lib.rs  podcast.rs  podcasts.rs
crates/gui/src/icon/: License and copyright notice
crates/gui/src/podcasts/: add.rs
crates/index/: Cargo.toml
crates/main/: Cargo.toml
crates/main/src/: errors.rs  lib.rs  main.rs  testing.rs
crates/main/src/testing/: simulate_user.rs  simulated_ui.rs
crates/media/: Cargo.toml
crates/media/src/: lib.rs  local.rs  streamer.rs
crates/media/src/streamer/: disk.rs  memory.rs
crates/media/src/streamer/disk/: status.rs  stream.rs
crates/media/tests/: download.rs
crates/panda/: Cargo.toml
crates/panda/src/: core.rs  lib.rs
crates/panda/src/core/: task.rs
crates/panda/src/interface/: unified.rs
crates/player/: Cargo.toml
crates/player/src/: lib.rs
crates/presenter/: Cargo.toml
crates/presenter/src/: lib.rs  tasks.rs
crates/remote_ui/: Cargo.toml
crates/remote_ui/src/: lib.rs
crates/search/: Cargo.toml
crates/search/src/: applepodcasts.rs  budget.rs  combiner.rs  lib.rs
crates/subscriber/: Cargo.toml
crates/subscriber/src/: lib.rs  publisher.rs  reader.rs  sub.rs
crates/subscriber/tests/: reader.rs
crates/traits/: Cargo.toml
crates/traits/src/: datastore.rs  entities.rs  lib.rs
crates/traits/src/datastore/: config.rs
crates/tui/src/: lib.rs  search.rs
data/: Cargo.toml
data/src/: config.rs  db.rs  id.rs  lib.rs  reader.rs  subs.rs
data/tests/: subscribe.rs
db/: Cargo.toml
db/src/: lib.rs
feed/: Cargo.toml
feed/src/: lib.rs
feed/tests/: api.rs
gui/: Cargo.toml
gui/src/: home.rs  icon.rs  lib.rs  menu.rs  podcast.rs  podcasts.rs
gui/src/podcasts/: add.rs
libs/stream_owl/: Cargo.toml
libs/stream_owl/examples/: priority.rs  simpel.rs
libs/stream_owl/src/: http_client.rs  lib.rs  manager.rs  network.rs  reader.rs  storage.rs  store.rs  stream.rs  target.rs  testing.rs  vecdeque.rs
libs/stream_owl/src/http_client/: connection.rs  data.rs  headers.rs  io.rs  read.rs  response.rs  size.rs  size_hint.rs
libs/stream_owl/src/http_client/io/: tcpstream_ext.rs
libs/stream_owl/src/manager/: task.rs
libs/stream_owl/src/reader/: prefetch.rs
libs/stream_owl/src/store/: capacity.rs  disk.rs  limited_mem.rs  mem.rs  migrate.rs  range_watch.rs  switch.rs  unlimited_mem.rs  watch.rs
libs/stream_owl/src/store/disk/: progress.rs
libs/stream_owl/src/store/migrate/: range_list.rs
libs/stream_owl/src/store/unlimited_mem/: range_store.rs
libs/stream_owl/src/stream/: builder.rs  drop.rs  task.rs
libs/stream_owl/src/stream/task/: counting_writer.rs  race_results.rs  race_seek.rs
libs/stream_owl/src/testing/: pausable_server.rs  static_file_server.rs
libs/stream_owl/test/: simpel.rs
libs/stream_owl/tests/: bandwidth.rs  disk_store.rs  manager.rs  migration.rs  pause.rs  simple.rs
main/: Cargo.toml
main/src/: errors.rs  lib.rs  main.rs
main/src/testing/: logging.rs  simulate_user.rs  simulated_ui.rs
main/tests/: main.rs
panda/: Cargo.toml
panda/src/: core.rs  interface.rs  lib.rs
panda/src/core/: task.rs
panda/src/interface/: unified.rs
player/: Cargo.toml
presenter/: Cargo.toml
presenter/src/: lib.rs
remote_ui/: Cargo.toml
remote_ui/src/: lib.rs
search/: Cargo.toml
search/src/: applepodcasts.rs  budget.rs  combiner.rs  lib.rs  podcastindex.rs
src/: 99percentinvisible  db.rs  download.rs  feed.rs  iced_wrapped.rs  main.rs  play.rs  widgets.rs
src/database/: episodes.rs  error.rs  mod.rs  podcasts.rs  podcasts2.rs  types.rs
src/download/: subscribe.rs
src/feed/: mod.rs
src/feed/search/: apikey.rs  applepodcasts.rs  mod.rs  podcastindex.rs
src/page/: episodes.rs  errorpage.rs  home.rs  mod.rs  podcasts.rs
src/page/home/: queue.rs
src/play/: mod.rs  stream.rs  subscribe.rs
src/widgets/: episode.rs  style.rs  util.rs
src/widgets/episode/: collapsed.rs  expanded.rs  mod.rs
state/: Cargo.toml
state/src/: db.rs  lib.rs
traits/: Cargo.toml
traits/src/: datastore.rs  entities.rs  lib.rs
tui/: Cargo.toml
tui/src/: lib.rs  search.rs
