[package]
name = "pods"
version = "0.1.0"
authors = ["dskleingeld <11743287+dskleingeld@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["desktop"]
desktop = []

[dependencies]
rodio = "0.13"
# iced = { version = "0.1", features = ["tokio"] }
# using glow causes the app to use opengl instead of vulkan
# seems to solve "Error: GraphicsAdapterNotFound"
iced = { version = "0.2", features = ["tokio_old", "glow"] }
sled = "0.34"
rss = "1"
reqwest = { version = "0.10", features = ["rustls-tls"] }
tokio = { version = "0.2", features = ["full"] }
bytes = "0.5" # keep at same minor version as reqwest
eyre = "0.6"
sha-1 = "0.9"
regex = "1"
arraydeque = "0.4"
url = "2.2"
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
# futures = "0.3"
# minimp3 = { version = "0.5", features = ["async_tokio"] }
