[package]
name = "data"
version = "0.1.0"
edition = "2021"

# [lib]
# crate-type = ["dylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
dbstruct = "0.3"

traits = { path = "../traits" }
futures-core = "0.3.28"
futures = "0.3.28"
tokio = { version = "1.29.1", features = ["sync"] }
tokio-stream = "0.1.14"
tempfile = "3.7.0"
