[package]
name = "feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
traits = { path = "../traits" }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["rustls"] , default-features=false}
