[package]
name = "feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
traits = { path = "../traits" }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
rss = "2.0.6"
thiserror = "1.0.44"
url = "2.4.0"
time = "0.3.25"
chrono = "0.4.26"

[dev-dependencies]
tokio = { version = "1.31.0", features = ["macros", "rt"] }
url = "2.4.0"
