[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
presenter = { path = "../presenter" }
traits = { path = "../traits" }
# iced = { version = "0.4", features = ["tokio"] }
iced = { git = "https://github.com/iced-rs/iced", features = ["tokio"] }
color-eyre = "0.6"
