[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# [lib]
# crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
presenter = { path = "../presenter" }
async-trait = "0.1" 
traits = { path = "../traits" }
# iced = { version = "0.4", features = ["tokio"] }
iced = { version = "0.7.0", features = ["tokio"] }
tokio = { version = "1", features = ["sync"] }
color-eyre = "0.6"
