[package]
name = "main"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/dvdsk/pods/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
state= { path = "../state" }
presenter= { path = "../presenter" }
gui = { path = "../gui" }
tui = { path = "../tui" }
remote_ui = { path = "../remote_ui" }
panda= { path = "../panda" }
index= { path = "../index" }
traits= { path = "../traits" }
search= { path = "../search" }
player= { path = "../player" }

clap = { version = "4.0.0-alpha.0", features = ["derive"], git = "https://github.com/clap-rs/clap" }
tokio = { version = "1.21", features = ["macros", "signal"] }
color-eyre = { version = "0.6.2", features = ["issue-url"] }
