[package]
name = "panda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db= { path = "../db" }
gui= { path = "../gui" }
tui= { path = "../tui" }
index= { path = "../index" }
traits= { path = "../traits" }
search= { path = "../search" }
player= { path = "../player" }

clap = { version = "4.0.0-alpha.0", features = ["derive"], git = "https://github.com/clap-rs/clap" }
