[package]
name = "traits"
version = "0.1.0"
edition = "2021"

# [lib]
# crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1" 
color-eyre = "0.6.2"
futures-core = "0.3.28"
tokio = { version = "1", features = ["sync"] }
