[package]
name = "tui"
version = "0.1.0"
edition = "2021"

# [lib]
# crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
presenter = { path = "../presenter" }
tui = "0.19"
tui-input = "0.5"

tracing = "0.1"
async-trait = "0.1" 
color-eyre = "0.6"
crossterm = { version = "0.25", features = ["event-stream"] }
futures = "0.3"
