[package]
name = "data"
version = "0.1.0"
edition = "2021"

# [lib]
# crate-type = ["dylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
traits = { path = "../traits" }
subscriber = { path = "../subscriber" }

tracing = "0.1"
dbstruct = "0.4.1"

futures-core = "0.3.28"
futures = "0.3.28"
tokio = { workspace = true }
tokio-stream = "0.1.14"
tempfile = "3.7.0"
derivative = "2.2.0"
futures-concurrency = "7.4.2"

[dev-dependencies]
chrono = "0.4.28"
