[package]
name = "main"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/dvdsk/pods/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data= { path = "../data" }
presenter= { path = "../presenter" }
gui = { path = "../gui" }
tui = { path = "../tui" }
remote_ui = { path = "../remote_ui" }
panda= { path = "../panda" }
index= { path = "../index" }
feed= { path = "../feed" }
traits= { path = "../traits" }
search= { path = "../search" }
player= { path = "../player" }
media= { path = "../media" }
subscriber= { path = "../subscriber" }

tokio = { workspace = true }
clap = { version = "4.0.0-alpha.0", features = ["derive"], git = "https://github.com/clap-rs/clap" }
color-eyre = { version = "^0.6.2", features = ["issue-url"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.36"
futures = "0.3.28"
futures-concurrency = "7.4.2"
console-subscriber = "0.1.10"
