[package]
name = "search"
version = "0.1.0"
edition = "2021"

# [lib]
# crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
traits = { path = "../traits" }
tokio = { workspace = true }

arraydeque = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
thiserror = "1"
tracing = "0.1"
regex = "1.6.0"
sha1 = "0.10.5"
async-trait = "0.1.57"
futures = "0.3.24"
itertools = "0.10.5"
