[package]
name = "stream_owl"
version = "0.1.0"
description = "A download and stream manager"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
futures = "0.3.28"
futures-concurrency = "7.4.3"
hickory-resolver = "0.24.0"
http = "0.2.9"
http-body-util = "0.1.0-rc.3"
hyper = { version = "1.0.0-rc.4", features = ["full"] }
network-interface = "1.0.3"
pin-project-lite = "0.2.13"
socket2 = { version = "0.5.4", features = ["all"] }
thiserror = "1.0.49"
tokio.workspace = true
tokio-stream = "0.1.14"
tracing = "0.1.39"
