[package]
name = "stream_owl"
version = "0.1.0"
description = "A download and stream manager"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
bytes = "1.5.0"
futures = "0.3.28"
futures-concurrency = "7.4.3"
hickory-resolver = "0.24.0"
http = "0.2.9"
http-body-util = "0.1.0-rc.3"
hyper = { version = "1.0.0-rc.4", features = ["full"] }
network-interface = "1.0.3"
pin-project-lite = "0.2.13"
rangemap = "1.4.0"
serde_urlencoded = "0.7.1"
socket2 = { version = "0.5.4", features = ["all"] }
thiserror = "1.0.49"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-stream = "0.1.14"
tracing = "0.1.40"

axum = { git = "https://github.com/tokio-rs/axum" }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tempfile = "3.8.1"
derivative = "2.2.0"
console-subscriber = "0.2.0"
rand = "0.8.5"
